Пофиксил меню, бэкдроп, портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         </a>
         <button
           type="button"
-          class="menu-button is-open"
+          class="menu-button"
           aria-expanded="false"
           aria-controls="menu-container"
           data-menu-button
@@ -44,7 +44,7 @@
             ></use>
           </svg>
         </button>
-        <div class="mobile-menu is-open" id="menu-container" data-menu>
+        <div class="mobile-menu" id="menu-container" data-menu>
           <nav class="nav">
             <ul class="nav__list">
               <li class="item item-1">
